[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/ghost.png" type="Texture" id=1]
[ext_resource path="res://Sprites/house.png" type="Texture" id=2]
[ext_resource path="res://Scenes/kid.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/ghost.gd" type="Script" id=4]
[ext_resource path="res://Scripts/kidspawner.gd" type="Script" id=5]
[ext_resource path="res://Scripts/house.gd" type="Script" id=6]
[ext_resource path="res://Music/Funny Horror (Looped).wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/foom_0.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/boo1.wav" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 4.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 8 )

[sub_resource type="Animation" id=7]
resource_name = "ConsumptionGlow"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 24.0

[node name="Level" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="house" type="AnimatedSprite" parent="."]
position = Vector2( 192, 24 )
frames = SubResource( 4 )
script = ExtResource( 6 )

[node name="Door" type="Area2D" parent="house"]
position = Vector2( 0, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="house/Door"]
shape = SubResource( 5 )

[node name="Funnel" type="Area2D" parent="house"]
position = Vector2( 0, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="house/Funnel"]
shape = SubResource( 6 )

[node name="Target" type="Position2D" parent="house/Funnel"]
position = Vector2( 0, -16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="house"]
anims/ConsumptionGlow = SubResource( 7 )

[node name="FoomSound" type="AudioStreamPlayer" parent="house"]
stream = ExtResource( 8 )

[node name="Souls" type="Label" parent="house"]
visible = false
margin_left = -24.0
margin_top = 184.0
margin_right = 16.0
margin_bottom = 198.0
text = "Souls 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ghost" type="Sprite" parent="."]
position = Vector2( 192, 48 )
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="SpookZone" type="Area2D" parent="ghost"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ghost/SpookZone"]
shape = SubResource( 8 )

[node name="BooSound" type="AudioStreamPlayer2D" parent="ghost"]
stream = ExtResource( 9 )

[node name="kid" parent="." instance=ExtResource( 3 )]
position = Vector2( 16, 128 )
state = "candy"

[node name="kidspawner" type="Timer" parent="."]
wait_time = 9.0
autostart = true
script = ExtResource( 5 )

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="body_entered" from="house/Door" to="house" method="_on_Door_body_entered"]
[connection signal="body_entered" from="house/Funnel" to="house" method="_on_Funnel_body_entered"]
[connection signal="body_exited" from="house/Funnel" to="house" method="_on_Funnel_body_exited"]
[connection signal="body_entered" from="ghost/SpookZone" to="ghost" method="_on_SpookZone_body_entered"]
[connection signal="body_exited" from="ghost/SpookZone" to="ghost" method="_on_SpookZone_body_exited"]
[connection signal="timeout" from="kidspawner" to="kidspawner" method="_on_kidspawner_timeout"]
